--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -4,7 +4,7 @@
     </div>
     <mat-card fxFlexAlign="center">
         <mat-card-title>
-            Login to MatFortyTwo
+            Login 
         </mat-card-title>
         <mat-card-content>
             <form (keyup.enter)="login(email, password)">
