--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,5 +1,6 @@
 <div class="login-page" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="50px">
     <div class="logo-container" fxFlexAlign="center">
+        <img src="https://media.glassdoor.com/sqll/522008/slk-global-solutions-squarelogo-1481220096145.png">
         <app-logo></app-logo>
     </div>
     <mat-card fxFlexAlign="center">
