--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,7 +2,7 @@
 
 $main-font-color: black;
 
-$my-app-primary: mat-palette($mat-red);
+$my-app-primary: mat-palette($mat-purple,103, 42, 150);
 $my-app-accent:  mat-palette($mat-blue-grey);
 $my-app-warn:    mat-palette($mat-red);
 
