--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,3 +1,24 @@
-<p>
-  home-page works!
-</p>
+<div class="row">
+  <div class="column">
+    <div class="card">
+      
+      <div class="container">
+ <p align="center"><img _ngcontent-din-c1="" class="navbar-logo" src="https://plsadaptive.s3.amazonaws.com/eco/images/partners/d9LlH30uApq7yZFT7FZGjR1xd4s9zwzcCZroXnUj.png"></p>
+  <div class="col-lg-12">
+
+    <div class="slider-main-wrap">
+
+
+      <h2 align="center">Dream Big. Think Beyond. INSPIRE MORE.</h2>  
+<p align="center"><img src="https://content.jdmagicbox.com/comp/bangalore/d8/080pxx80.xx80.191204194629.f2d8/catalogue/slk-software-pvt-ltd-bangalore-g9momfno62.jpg?clr="></p>
+
+    </div>
+
+  </div>
+  <p> SLK Global Solutions is a business process transformation enterprise delivering comprehensive digital platforms and solutions driven by technology. SLK Group is the parent company of SLK Software and SLK Global. </p>
+    <p>Together, we are a high energy, result oriented, Software Services and Business Process transformation provider. As a fast paced organization with a culture of excellence, we are obsessed with customer delight by driving business outcomes.</p><p>From keeping the lights on, to transforming for success; we work at creating superior customer experiences for some of the largest Fortune 500 companies in the world.</p>
+
+      </div>
+    </div>
+  </div>
+</div>
